# Ferrous

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  release_on_tag.yml  rust.yml
ch8-core/: Cargo.toml
ch8-core/src/: cpu.rs  font.rs  lib.rs
ch8-sdl2/: Cargo.toml
ch8-sdl2/src/: audio.rs  graphics.rs  main.rs
ch8-wasm/: index.html  style.css
ch8-wasm/js/: audio.js  script.js
crates/ferrous/: Cargo.toml
crates/ferrous/src/: lib.rs  vm.rs
crates/ferrous/src/vm/: font.rs  instructions.rs
ferrous/: Cargo.toml
ferrous-core/: Cargo.toml
ferrous-core/src/: cpu.rs  lib.rs
ferrous-native/: Cargo.toml
ferrous-native/src/: frontend.rs  main.rs
ferrous-native/src/frontend/: audio.rs  fps_limiter.rs  gui.rs
ferrous/src/: cpu.rs  ferrous.rs  font.rs  lib.rs
src/: app.rs  emulator.rs  frontend.rs  graphics.rs  main.rs
src/app/: file_dialog.rs
src/assets/: Rust Logo.raw
src/frontend/: audio.rs  gui.rs
tests/: README.md
