[workspace]
members = [
    "ferrous-core",
]

[package]
name = "ferrous-ch8"
version = "1.0.1"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
description = "A simple, full featured (super) Chip-8 interpreter."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NightShade256/ferrous-ch8"

[dependencies]
ferrous-core = { path = "./ferrous-core" }
glium = "0.29.0"
imgui = "0.6.1"
imgui-glium-renderer = "0.6.1"
imgui-winit-support = "0.6.1"
nfd2 = "0.2.3"
rodio = "0.13.0"

[profile.release]
lto = "fat"
