[workspace]
members = [
    "ferrous-core",
]

[package]
name = "ferrous-ch8"
version = "1.1.2"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
description = "A simple, full featured (super) Chip-8 interpreter."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NightShade256/ferrous-ch8"

[dependencies]
ferrous-core = { path = "./ferrous-core", features = ["savestates"] }
glium = "0.29.0"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-memory-editor = { git = "https://github.com/NightShade256/rust-imgui-memory-editor" }
imgui-winit-support = "0.7.0"
nfd2 = "0.2.3"
rodio = "0.13.1"
serde_json = "1.0.62"
