[package]
name = "ch8-core"
version = "0.2.0"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
description = "A simple Chip-8 interpreter backend."
license = "Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen", "rand/wasm-bindgen"]

[dependencies]
rand = "0.7.3"
wasm-bindgen = { version = "0.2.69", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
