[package]
name = "ch8-core"
version = "0.4.0"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
description = "A simple Chip-8 interpreter backend."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NightShade256/oxidized-ch8"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["rand/wasm-bindgen", "wasm-bindgen", "web-sys"]

[dependencies]
rand = "0.7.3"
wasm-bindgen = { version = "0.2.69", optional = true }

[dependencies.web-sys]
version = "0.3.46"
optional = true
features = [
    "CanvasRenderingContext2d"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
