[package]
name = "ch8-sdl2"
version = "0.1.1"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
description = "A frontend for `ch8-core` with SDL2."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
ch8-core = { path = "../ch8-core" }
clap = "2.33.3"
sdl2 = "0.34.3"
