[package]
name = "ch8-sdl2"
version = "0.2.0"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
description = "A frontend for `ch8-core` with SDL2."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NightShade256/oxidized-ch8"

[dependencies]
ch8-core = { path = "../ch8-core" }
clap = "2.33.3"
sdl2 = "0.34.3"

[features]

bundled = ["sdl2/bundled"]
