[package]
name = "ferrous-core"
version = "1.1.0"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
description = "A simple Chip-8 interpreter backend for Ferrous Chip-8."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NightShade256/ferrous-ch8"

[features]
savestates = ["serde"]
wasm = ["getrandom"]

[dependencies]
getrandom = { version = "0.2.1", features = ["js"], optional = true }
rand = "0.8.2"
serde = { version = "1.0.120", features = ["derive"], optional = true }
