[package]
name = "ferrous-native"
version = "1.1.3"
edition = "2018"

[dependencies]
ferrous = { path = "../ferrous", features = ["savestates"] }
glium = "0.29.0"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-memory-editor = { git = "https://github.com/NightShade256/rust-imgui-memory-editor" }
imgui-winit-support = "0.7.0"
nfd2 = "0.3.0"
rodio = "0.13.1"
serde_json = "1.0.73"
