[package]
name = "ferrous"
version = "1.1.2"
edition = "2018"

[features]
savestates = ["serde", "serde-big-array"]
wasm = ["getrandom"]

[dependencies]
getrandom = { version = "0.2.3", features = ["js"], optional = true }
rand = "0.8.4"
serde = { version = "1.0.129", default-features = false, features = ["derive"], optional = true }
serde-big-array = { version = "0.3.2", features = ["const-generics"], optional = true }
