[package]
name = "ferrous"
version = "1.1.3"
edition = "2018"

[features]
savestates = ["serde", "serde-big-array"]
wasm = ["getrandom"]

[dependencies]
getrandom = { version = "0.2.3", features = ["js"], optional = true }
rand = "0.8.4"
serde = { version = "1.0.137", default-features = false, features = ["derive"], optional = true }
serde-big-array = { version = "0.3.2", features = ["const-generics"], optional = true }
